test/fail/bad-unops.as
let a = ^3;
let b = ^-5;
let c : Nat = +3;
let d : Nat = -3;
